--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -10,6 +10,8 @@ article#post-78 {
         section.founder-info {
             h3 {
                 margin-bottom: 0;
+                font-weight: bold;
+                font-size: 1.35rem;
             }
 
             img {
@@ -41,7 +43,7 @@ article#post-78 {
         section.join-us-info {
             a.button {
                 display: block;
-                border: 2px solid #f1876b;
+                border: 3px solid #f1876b;
                 border-radius: 25px 25px;
                 margin: 0 auto;
                 padding: 0.5rem 1.5rem;
@@ -117,14 +119,14 @@ article#post-78 {
                 align-items: center;
                 justify-content: center;
 
-                width: 80%;
+                width: 90%;
                 margin: 0 auto;
             }
         }
         section.founder-info-container {
             @include page-grid-layout;
             section.founder-info {
-                width: 80%;
+                width: 90%;
                 margin: 0 auto;
             }
         }
@@ -133,7 +135,7 @@ article#post-78 {
             @include page-grid-layout;
             section.join-us-info {
                 div.join-us-content {
-                    width: 80%;
+                    width: 90%;
                     margin: 0 auto;
                 }
             }
