--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -11,17 +11,18 @@ body.page-id-67 {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                margin-bottom: 1rem;
                 button.menu-tab-btn {
                     @include menu-button-style;
                 }
                 button.menu-tab-btn.current-menu-tab {
-                    border: 2px solid $coral;
+                    border: 3px solid $coral;
                     background-color: $coral;
                     color: $text-color-light;
                 }
 
                 button.menu-tab-btn:hover {
-                    border: 2px solid $coral;
+                    border: 3px solid $coral;
                     background-color: $coral;
                 }
             }
@@ -31,7 +32,7 @@ body.page-id-67 {
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    
+
                     div.menu-item-description {
                         margin-bottom: 0.5rem;
                         order: 3;
@@ -41,6 +42,7 @@ body.page-id-67 {
                         margin-bottom: 0.5rem;
                         img {
                             border: 5px solid $blue;
+                            border-radius: 10px;
                             max-width: 100%;
                             object-fit: cover;
                             height: 360px;
@@ -66,7 +68,7 @@ body.page-id-67 {
                     gap: 1rem;
                     button.menu-tab-btn {
                         background-color: $bg-color;
-                        border: 2px solid $blue;
+                        border: 3px solid $blue;
                         margin-bottom: 0.25rem;
                         border-radius: 20px;
                         padding: 0.5rem 0.8rem;
@@ -74,7 +76,7 @@ body.page-id-67 {
                     }
                     button.menu-tab-btn:hover,
                     button.menu-tab-btn:focus {
-                        border: 2px solid $coral;
+                        border: 3px solid $coral;
                     }
                 }
                 section.menu-category-container {
